[package]
name = "esp32_test_macro"
authors = ["Oguz Emre <oguzemre926@gmail.com>"]
version = "0.1.0"
edition = "2021"
keywords = ["esp32_test"]
license = "MIT"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn =  { version = "2.0.28", features = ["full"] }
quote = "1.0"

[workspace]
exclude = [
    ".idea/*",
]